[package]
name = "url-shortener"
version = "0.1.0"
authors = ["poorpy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix = "0.12"
redis = { version = "0.21.0", features = ["tokio-comp"] }
crc64 = "1.0.0"
base64 = "0.13.0"
serde = "1.0.126"
